DATA/1.OLD_RUBRICATOR/2026.04.26/3.RUBRICATOR_FIXES.md
# Рубрикатор: перечень исправлений

| N | Коды Файла.Категории.Исправления.Пункты/Строки| Пункт(ы) | Строки   | Короткое описание (паттерн)                          | Подробное описание (промпт)
|---|-----------------------------------------------|----------|----------|------------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
|1  |v50.SQL.OUTERJOIN.п.1.1                        |п.1.1     |          |Замена '(+)' на 'LEFT/RIGHT JOIN'                     |В Oracle используется оператор '(+)' для внешнего соединения. В PostgreSQL и ANSI SQL его нет. Заменить на явные 'LEFT JOIN' или 'RIGHT JOIN' с условием 'ON'
|2  |v50.SQL.ROWNUM.п.1.2                           |п.1.2     |          |Замена 'rownum' на 'FETCH FIRST'                      |Псевдоколонка 'rownum' не поддерживается в PostgreSQL. Использовать 'FETCH FIRST N ROWS ONLY'. Для сдвига выборки использовать 'OFFSET ON'
|3  |v50.SQL.UDF.п.1.3                              |п.1.3     |          |Запрет UDF в WHERE/GROUP BY/ORDER BY                  |Пользовательские функции нельзя в условиях фильтрации, группировки и сортировки. Только в SELECT-листе верхнего уровня
|4  |v50.SQL.DECODE.п.1.6.1                         |п.1.6.1   |          |Замена 'DECODE' на 'CASE'                             |Функция 'DECODE' специфична для Oracle. Заменять на ANSI-конструкцию 'CASE WHEN ... THEN ... ELSE ... END'
|5  |v50.SQL.CONNECTBY.п.1.8                        |п.1.8     |          |Замена 'CONNECT BY' на 'WITH RECURSIVE'               |Иерархические запросы с 'CONNECT BY' не поддерживаются. Использовать рекурсивные CTE: 'WITH RECURSIVE'
|6  |v50.SQL.SYSVIEW.п.1.9                          |п.1.9     |          |Замена 'v$session' на 'VW_DB_SESSION'                 |Системные представления Oracle недоступны. Использовать 'VW_DB_SESSION' с полями SESSION_SID, STATUS, MODULE, ACTION
|7  |v50.SQL.CONTEXT.п.1.23                         |п.1.23    |          |Замена 'sys_context('USERENV','DB_NAME')'             |Контекст 'USERENV' не поддерживается. Использовать '::[RUNTIME].[ENVIRONMENT].ClassStorage('ТБП').dbName'
|8  |v50.SQL.FUNC_REQ.п.1.14                        |п.1.14    |          |Ограничения функциональных реквизитов                 |Функциональные реквизиты можно использовать только в SELECT-листе запроса верхнего уровня
|9  |v50.SQL.SIMPLE_VIEW.п.1.21                     |п.1.21    |          |Запрет простых представлений                          |Простые представления отсутствуют в dbi проекте. Нужно переписать в PlPlus представления
|10 |v50.SQL.TABLE_SELECT.п.1.13                    |п.1.13    |          |Замена 'SELECT FROM TABLE()'                          |Поддержана выборка из скалярных ассоциативных массивов и из массивов объектных типов
|11 |v50.SQL.DML_JOIN.п.1.17                        |п.1.17    |          |Переписывание DML на подзапросы                       |Нет совместимости синтаксиса 'update/delete from (join)' между Oracle и PostgreSQL
|12 |v50.SQL.HINTS.п.1.18                           |п.1.18    |          |Удаление подсказок оптимизатора                       |В PostgreSQL подсказки (hints) не работают
|13 |v50.STOR.DATE.п.2.2                            |п.2.2     |          |Замена 'DATE' на 'DATE_TIME'                          |В PostgreSQL тип 'DATE' не хранит время. Использовать 'DATE_TIME' (timestamp(0))
|14 |v50.STOR.TEMP.п.2.8                            |п.2.8     |          |Замена временных таблиц на 'VARRAY'                   |Временные таблицы приводят к проблемам производительности. Заменять на 'VARRAY' (до 10 000 записей)
|15 |v50.STOR.INDEX.п.2.6.3                         |п.2.6.3   |          |Учёт ограничения 2704 байт для BTREE                  |Размер строки BTREE индекса не более 2704 байт. При превышении переходить на GIST/GIN
|16 |v50.PROC.CRYPTO.п.3.1.2                        |п.3.1.2   |          |Замена 'dbms_crypto' на 'INT_EXT_CALL_001'            |Пакет 'dbms_crypto' недоступен. Использовать '::[PCORE_INTERFACE].[INT_EXT_CALL_001]'
|17 |v50.PROC.SMTP.п.3.1.3                          |п.3.1.3   |          |Замена 'utl_smtp' на 'INT_EMAIL_001'                  |Пакет 'utl_smtp' недоступен. Использовать '::[PCORE_INTERFACE].[INT_EMAIL_001]'
|18 |v50.PROC.HTTP.п.3.1.6                          |п.3.1.6   |          |Замена 'utl_http' на 'HTTP_MGR'                       |Пакет 'utl_http' недоступен. Использовать '::[RUNTIME].[HTTP_MGR]'
|19 |v50.PROC.EXECUTE.п.3.3                         |п.3.3     |          |Экранирование имён таблиц в 'execute immediate'       |Имена таблиц экранировать двойными кавычками: '"Z#MY_TABLE"'
|20 |v50.PROC.WHENOTHERS.п.3.5                      |п.3.5     |          |Добавление 'ROLLBACK' или 'RAISE' в 'WHEN OTHERS'     |В PostgreSQL после ошибки транзакция прерывается. Обязательно делать 'ROLLBACK' или 'RAISE'
|21 |v50.PROC.BULK.п.1.28                           |п.1.28    |          |Включение batch для bulk операций                     |Включить batch через 'APPLICATION.DBI=1' или 'pragma hint('jdbc_batch(true)')'
|22 |v50.PROC.JSON.п.3.1.4                          |п.3.1.4   |          |Использование '[RUNTIME].[LIB_JSON]' для JSON         |Для работы с JSON использовать только '::[RUNTIME].[LIB_JSON]'
|23 |v50.PROC.TRIGGER.п.3.8                         |п.3.8     |          |Замена триггеров БД на операции-триггеры              |Триггеры БД заменить на операции типа "Триггер" в PL+
|24 |v50.PROC.XML.п.3.6                             |п.3.6     |          |Использование '[RUNTIME].[XML_DB]' для XML            |Использовать '[RUNTIME].[XML_DB]', '[RUNTIME].[XML_DOM]'. XMLType в SQL запрещён
|25 |v50.PROC.EXCEPTIONLOOP.п.1.25                  |п.1.25    |          |Запрет конструкции 'exceptionloop'                    |Конструкция 'exceptionloop' запрещена
|26 |v50.PROC.MACROS.п.3.4                          |п.3.4     |          |Запрет макросов 'execute' и 'process'                 |Макросы подстановки 'execute' и 'process' не поддерживаются
|27 |v50.PROC.DYNAMIC_SQL.п.3.3                     |п.3.3     |          |Замена 'DBMS_SQL' на '[RUNTIME].[CALC]'               |Динамический SQL через 'DBMS_SQL' заменить на '::[RUNTIME].[CALC]' или '::[RUNTIME].[PLP]'
|28 |v50.INT.DBLINK.п.4.2                           |п.4.2     |          |Замена Database Link на REST/SOAP                     |Database Link не поддерживается. Использовать веб-сервисы
|29 |v50.INT.QUEUE.п.4.4                            |п.4.4     |          |Использование '[RUNTIME].[AQ_LIB]' для очередей       |Для работы с очередями использовать '::[RUNTIME].[AQ_LIB]'
|30 |v50.CACHE.REF.п.6.10                           |п.6.10    |          |Получение полей сразу в курсоре                       |Разыменование ссылок в цикле вызывает точечные запросы. Получать поля сразу в SELECT-листе
|31 |v50.CACHE.CONFIG.п.6.13                        |п.6.13    |          |Настройка кэша 2 уровня в 'config_orm.xml'            |Для часто используемых ТБП настроить кэш 2 уровня
|32 |тдс20240828.SQL.DML_JOIN.стр.1                 |          |стр.1     |Запрет DML с присоединением немодифицируемых таблиц   |В 'update'/'delete' нельзя присоединять таблицы, которые не модифицируются
|33 |тдс20240828.SQL.METADATA.стр.3                 |          |стр.3     |Запрет выборки из таблиц метаданных с JOIN            |Нельзя использовать 'JOIN' с 'varray', аналитические функции и иерархические запросы
|34 |тдс20240828.SQL.PSEUDO.стр.3                   |          |стр.3     |Запрет псевдоколонок Oracle                           |Псевдоколонки 'ROWID', 'ROWNUM', 'XMLDATA' не поддерживаются
|35 |тдс20240828.PROC.REPORT.стр.3                  |          |стр.3     |Запрет операций-отчётов с Oracle Reports              |Использовать OOXML
|36 |тдс20240828.SQL.SIMPLE_VIEW.стр.3              |          |стр.3     |Запрет простых представлений                          |Вместо 'VIEW' использовать PL+ представления
|37 |тдс20240828.SQL.ANSI_JOIN_ANNOTATION.стр.3-4   |          |стр.3-4   |Добавление '@generate_ansi_joins(true)' для A2        |Для хранилищ A2 добавлять аннотацию для генерации ANSI JOIN
|38 |тдс20240828.SQL.FETCH_EXISTS.стр.5             |          |стр.5     |Запрет 'fetch' в подзапросе 'EXISTS'                  |В подзапросе 'EXISTS' нельзя использовать 'fetch'
|39 |тдс20240828.SQL.UDF_LIMITS.стр.6               |          |стр.6     |Ограничения UDF в SQL-запросах                        |UDF разрешены только в SELECT-листе верхнего уровня без UNION
|40 |тдс20240828.SQL.XMLTYPE.стр.7                  |          |стр.7     |Запрет XMLType в SQL-запросах                         |В SQL-запросах нельзя использовать 'XMLType'
|41 |тдс20240828.SQL.VW_SQL.стр.7                   |          |стр.7     |Запрет обращений к 'VW_SQL'                           |Представления 'VW_SQL' не поддерживаются
|42 |тдс20240828.PROC.MACRO.стр.7                   |          |стр.7     |Запрет макросов 'execute' и 'process'                 |Макросы подстановки не поддерживаются
|43 |тдс20240828.PROC.DYNAMIC_SQL.стр.7             |          |стр.7     |Замена 'DBMS_SQL' на '[RUNTIME].[CALC]'               |Динамический SQL заменить на '::[RUNTIME].[CALC]' или '::[RUNTIME].[PLP]'
|44 |тдс20240828.SQL.DECODE.стр.7-8                 |          |стр.7-8   |Замена 'DECODE' на 'CASE'                             |'CASE' более универсален и безопасен
|45 |тдс20240828.SQL.DATE_ARITHM.стр.8              |          |стр.8     |Использование 'to_number()' при вычитании дат         |В PostgreSQL 'DATE - DATE' возвращает 'INTERVAL'. Приводить к числу через 'to_number()'
|46 |тдс20240828.STOR.TEMP_INIT.стр.8               |          |стр.8     |Вызов 'init_temp_table()' перед использования        |Перед использованием временной таблицы вызвать 'init_temp_table()'
|47 |тдс20240828.PROC.TRIGGER.стр.9-10              |          |стр.9-10  |Замена триггеров БД на операции-триггеры              |Триггеры БД заменить на операции типа "Триггер" в PL+
|48 |тдс20240828.SQL.FUNC_REQ.стр.10                |          |стр.10    |Ограничения функциональных реквизитов                 |Функциональные реквизиты можно использовать только в SELECT-листе верхнего уровня
|49 |тдс20240828.SQL.HIERARCHICAL.стр.10-11         |          |стр.10-11 |Замена 'CONNECT BY' на 'WITH RECURSIVE'               |Иерархические запросы по метаданным запрещены
|50 |тдс20240828.SQL.CAST.стр.11                    |          |стр.11    |Явное приведение типов                                |Писать код с совместимыми типами или явным преобразованием
|51 |тдс20240828.PROC.EXCEPTIONLOOP.стр.11          |          |стр.11    |Запрет конструкции 'exceptionloop'                    |Конструкция 'exceptionloop' запрещена
|52 |тдс20240828.SQL.BIND_GROUP.стр.12              |          |стр.12    |Запрет bind переменных в GROUP BY, DISTINCT, ORDER BY |Нельзя использовать bind-переменные в этих выражениях
|53 |тдс20240828.SQL.CONTEXT_USERENV.стр.12         |          |стр.12    |Запрет контекстов USERENV и <OWNER>_SYSTEM            |Использовать пользовательский контекст через 'executor.set_context'
|54 |тдс20240828.SQL.XMLQUERY.стр.12                |          |стр.12    |Замена 'XMLQuery' на 'execute immediate'              |'XMLQuery' не поддерживается
|55 |тдс20240828.SQL.NESTED_TABLE.стр.12            |          |стр.12    |Запрет SQL-выборки из nested table                    |Использовать циклы или выборку из скалярных/объектных типов
|56 |тдс20240828.SQL.OBJ_TYPES.стр.13               |          |стр.13    |Замена объектных типов Oracle                         |Использовать 'LIB_JSON' для JSON
|57 |тдс20240828.SQL.ORA_HASH.стр.13                |          |стр.13    |Замена 'ORA_HASH'                                     |Использовать 'dbms_crypto.hash' или 'INT_EXT_CALL_001'
|58 |тдс20240828.PROC.CODEGEN.стр.14                |          |стр.14    |Запрет кодогенерации операций и представлений         |Нельзя из PL+ создавать или изменять операции и представления
|59 |тдс20240828.PROC.TRANSACTION.стр.14            |          |стр.14    |Обработка прерванных транзакций                       |После ошибки БД в 'WHEN OTHERS' делать 'ROLLBACK' или 'RAISE'
|60 |тдс20240828.PROC.JSON.стр.14                   |          |стр.14    |Использование '[RUNTIME].[LIB_JSON]' для JSON         |Для работы с JSON использовать только '::[RUNTIME].[LIB_JSON]'
|61 |тдс20240828.PROC.CHARSET.стр.14                |          |стр.14    |Использование '[RUNTIME].[CHARSET]' для кодировок     |Для конвертации кодировок использовать '::[RUNTIME].[CHARSET]'
|62 |тклоик20240828.LOCAL.PREFIX.стр.1              |          |стр.1     |Префикс 'PSH_' для объектов Банка                     |Объекты Банка должны иметь префикс 'PSH_' в коротком имени
|63 |тклоик20240828.LOCAL.PREFIX_BANK.стр.1         |          |стр.1     |Префикс банка '[ПСБ]' для локальных объектов          |Локальные объекты должны содержать префикс '[ПСБ]'
|64 |тклоик20240828.LOCAL.OOXML.стр.1               |          |стр.1     |Новые отчёты в формате OOXML                          |Использовать формат OOXML для отчётов Word и Excel
|65 |тклоик20240828.LOCAL.CYRILLIC.стр.1            |          |стр.1     |Запрет кириллицы в вычисляемых кодах                  |Вычисляемые коды не должны содержать кириллицу
|66 |тклоик20240828.LOCAL.EXTENSION.стр.1           |          |стр.1     |Флаг "Объединённый пакет" для операций расширения     |У новых операций расширения должен быть флаг "Объединённый пакет"
|67 |тклоик20240828.LOCAL.VIEW_DEFAULT.стр.2        |          |стр.2     |Умолчательное представление 'VW_CRIT_ИМЯ_КЛАССА'      |В новых классах должно быть представление "Полный список"
|68 |тклоик20240828.LOCAL.VIEW_FILTER.стр.2         |          |стр.2     |Установка глобальных переменных только в EXECUTE      |В операциях-фильтрах установку переменных делать только в EXECUTE
|69 |тклоик20240828.LOCAL.VIEW_USER.стр.2           |          |стр.2     |Замена 'USER' на '[RUNTIME].[STDLIB].userid'          |В представлениях вместо 'USER' использовать '::[RUNTIME].[STDLIB].userid'
|70 |тклоик20240828.DEV.NAMING.стр.2                |          |стр.2     |Идентификаторы с подчёркиваниями                      |Имена писать с разделением подчёркиванием: 'OPER_DATE'
|71 |тклоик20240828.DEV.REFERENCE_SYNTAX.стр.2      |          |стр.2     |Правильный синтаксис обращения к объектам             |Указывать полный путь: ':[ТБП].[ОПЕРАЦИЯ].<объект>'
|72 |тклоик20240828.DEV.THIS_FORBIDDEN.стр.3        |          |стр.3     |Запрет 'THIS' для инициализации                       |Не использовать 'THIS' для инициализации переменных
|73 |тклоик20240828.DEV.REUSE_LIBRARIES.стр.3       |          |стр.3     |Использование существующих библиотек                  |Проверить библиотеки 'RUNTIME', 'StdLib', 'F', 'FD', 'FDP'
|74 |тклоик20240828.DEV.NO_OBJECTS_VIEW.стр.3       |          |стр.3     |Запрет запросов к 'OBJECTS', 'COL2OBJ', 'REFS'        |Запросы к этим представлениям снижают производительность
|75 |тклоик20240828.DEV.NO_MULTI_MODIFIER.стр.3     |          |стр.3     |Запрет нескольких модификаторов '%' подряд            |Не использовать более одного модификатора '%' подряд
|76 |тклоик20240828.DEV.VARCHAR_SIZE.стр.4          |          |стр.4     |Указывать размерность VARCHAR2/STRING                 |Всегда указывать размерность для 'VARCHAR2' и 'STRING'
|77 |тклоик20240828.DEV.NO_INTEGER_FOR_ID.стр.4     |          |стр.4     |Запрет 'INTEGER' для ID экземпляров                   |ID экземпляров могут превышать диапазон 'PLS_INTEGER'
|78 |тклоик20240828.DEV.NO_GOTO.стр.5               |          |стр.5     |Запрет 'GOTO'                                         |Синтаксис 'GOTO <LABEL>' запрещён
|79 |тклоик20240828.DEV.NO_SAVEPOINT_DIRECT.стр.5   |          |стр.5     |Запрет прямых 'SAVEPOINT'/'ROLLBACK'                  |Использовать макросы для генерации уникальных имён точек сохранения
|80 |тклоик20240828.DEV.VARIABLE_PREFIX.стр.6       |          |стр.6     |Префикс 'v_' для локальных переменных                 |Локальные переменные должны начинаться с 'v_'
|81 |тклоик20240828.DEV.CONSTANT_PREFIX.стр.6-7     |          |стр.6-7   |Префикс 'cn_' для локальных констант                  |Локальные константы должны начинаться с 'cn_'
|82 |тклоик20240828.DEV.PARAM_PREFIX.стр.7          |          |стр.7     |Префикс 'p_' для параметров                           |Параметры процедур и функций должны начинаться с 'p_'
|83 |тклоик20240828.DEV.CURSOR_PREFIX.стр.7         |          |стр.7     |Префикс 'cur_' для курсоров                           |Локальные курсоры должны начинаться с 'cur_'
|84 |тклоик20240828.DEV.GLOBAL_VAR.стр.7            |          |стр.7     |Запрет глобальных переменных                          |Запрещено использование глобальных переменных, влияющих на логику
|85 |тклоик20240828.DEV.CASE.стр.8                  |          |стр.8     |Служебные слова строчными буквами                     |Служебные слова писать строчными буквами
|86 |тклоик20240828.DEV.NO_PLSQL_INSERT.стр.8       |          |стр.8     |Запрет PL/SQL вставок                                 |Запрещено использовать PL/SQL вставки. Переписывать на PL+