DATA/1.OLD_RUBRICATOR/2026.05.05/3.RUBRICATOR_FIXES.md
# Рубрикатор: перечень исправлений
#   "++" - флаги для обработки (1-й символ "-" - не выполнять исправлние, 2-й символ "+" - выводить рассуждение в Журнал выполнения)
|N  |++|Коды Файла.Категории.Исправления.Пункты/Строки|Пункт/Стр.|Теги                      |Короткое описание исправления                       |Подробное описание                                                                                                                                                                                                                                |Пример кода для корректировки                             |Пример исправленного кода
|---|--|----------------------------------------------|----------|--------------------------|----------------------------------------------------|--------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|----------------------------------------------------------|-------------------------------------------------------------
|1  |++|v50.SQL.OUTERJOIN.п.1.1                       |п.1.1     |outer join,oracle,ansi    |Замена `(+)` на `LEFT/RIGHT JOIN`                   |В Oracle используется оператор `(+)` для внешнего соединения. В PostgreSQL и ANSI SQL его нет. Заменить на явные `LEFT JOIN` или `RIGHT JOIN` с условием `ON`.                                                                                    |`select * from t1, t2 where t1.id = t2.id(+)`             |`select * from t1 left join t2 on t1.id = t2.id`
|2  |++|v50.SQL.ROWNUM.п.1.2                          |п.1.2     |rownum,limit,offset       |Замена `rownum` на `FETCH FIRST`                    |Псевдоколонка `rownum` не поддерживается в PostgreSQL. Использовать `FETCH FIRST N ROWS ONLY`. Для сдвига выборки использовать `OFFSET ON`. Не использовать `fetch` в подзапросе `EXISTS`.                                                        |`select * from t where rownum = 1`                        |`select * from t fetch first 1 rows only`
|3  |++|v50.SQL.UDF.п.1.3                             |п.1.3     |udf,function,performance  |Запрет UDF в WHERE/GROUP BY/ORDER BY                |Пользовательские функции нельзя в условиях фильтрации, группировки и сортировки. Только в SELECT-листе верхнего уровня. Не поддерживается в подзапросах, UNION, выражениях. В представлениях не работают сортировка и фильтрация по UDF-колонкам. |`where my_func(id) > 0`                                   |`select id, my_func(id) from t`
|4  |++|v50.SQL.DECODE.п.1.6.1                        |п.1.6.1   |decode,case,conditional   |Замена `DECODE` на `CASE`                           |Функция `DECODE` специфична для Oracle. Заменять на ANSI-конструкцию `CASE WHEN ... THEN ... ELSE ... END`. При ошибке компиляции case-конструкции требуется ручная замена.                                                                       |`select decode(status,1,'A',2,'B','?') from t`            |`select case status when 1 then 'A' when 2 then 'B' else '?' end from t`
|5  |++|v50.SQL.CONNECTBY.п.1.8                       |п.1.8     |hierarchical,connect by,cte|Замена `CONNECT BY` на `WITH RECURSIVE`            |Иерархические запросы с `CONNECT BY` не поддерживаются. Использовать рекурсивные CTE: `WITH RECURSIVE`. Нет аналога NOCYCLE — ограничение от зацикливания указывать в WHERE. Иерархические запросы по метаданным запрещены.                       |`select * from t connect by prior id = parent_id start with parent_id is null`|`with recursive t as (select * from t where parent_id is null union all select t2.* from t t1 join t t2 on t1.id = t2.parent_id) select * from t`
|6  |++|v50.SQL.SYSVIEW.п.1.9                         |п.1.9     |system view,oracle,session|Замена `v$session` на `VW_DB_SESSION`               |Системные представления Oracle недоступны. Использовать `VW_DB_SESSION` с полями SESSION_SID, STATUS, MODULE, ACTION. Представления `VW_SQL` не поддерживаются полностью.                                                                         |`select * from v$session`                                 |`select * from VW_DB_SESSION`
|7  |++|v50.SQL.CONTEXT.п.1.23                        |п.1.23    |context,userenv,database  |Замена `sys_context('USERENV','DB_NAME')`           |Контекст `USERENV` не поддерживается. Использовать `::[RUNTIME].[ENVIRONMENT].ClassStorage('ТБП').dbName`.                                                                                                                                        |`sys_context('USERENV','DB_NAME')`                        |`::[RUNTIME].[ENVIRONMENT].ClassStorage('ТБП').dbName`
|8  |++|v50.SQL.FUNC_REQ.п.1.14                       |п.1.14    |functional,attributes     |Ограничения функциональных реквизитов               |Функциональные реквизиты можно использовать только в SELECT-листе запроса верхнего уровня. Во всех остальных местах недопустимо использование без секции «SQL значение».                                                                          |Функциональный реквизит в WHERE                           |`func_req in SELECT`
|9  |++|v50.SQL.SIMPLE_VIEW.п.1.21                    |п.1.21    |view,simple               |Запрет простых представлений                        |Простые представления отсутствуют в dbi проекте. Их нужно сконвертировать/переписать в PlPlus представления с учетом ANSI синтаксиса.                                                                                                             |`create view v as select ...`                             |PL+ представление
|10 |++|v50.SQL.TABLE_SELECT.п.1.13                   |п.1.13    |collection,array,table    |Замена `SELECT FROM TABLE()`                        |Синтаксис выборки из коллекций не формализован в ANSI SQL. Поддержана выборка из скалярных ассоциативных массивов и из массивов объектных типов.                                                                                                  |`select * from table(collection)`                         |поддерживается для скалярных массивов
|11 |++|v50.SQL.DML_JOIN.п.1.17                       |п.1.17    |dml,join,update,delete    |Переписывание DML на подзапросы                     |Нет совместимости синтаксиса `update/delete from (join)` между Oracle и PostgreSQL. Требуется переписать код, например, на подзапросы.                                                                                                            |`delete from (select ... from t1 join t2)`                |переписать на подзапрос
|12 |++|v50.SQL.HINTS.п.1.18                          |п.1.18    |hints,optimizer           |Удаление подсказок оптимизатора                     |В PostgreSQL нет возможности управлять логикой работы Planner/Optimizer. Подсказки (hints) не работают, рекомендуется их удалять.                                                                                                                 |`select /*+ INDEX(t idx) */ ...`                          |`select ...`
|13 |++|v50.STOR.DATE.п.2.2                           |п.2.2     |date,type,timestamp       |Замена `DATE` на `DATE_TIME`                        |В PostgreSQL тип `DATE` не хранит время. Использовать тип `DATE_TIME` (timestamp(0)). Для арифметики применять `INTERVAL`. Для вычитания дат использовать `to_number(to_char(date1-date2))`.                                                      |`DateTimeEnd date;`                                       |`DateTimeEnd date_time;`
|14 |++|v50.STOR.TEMP.п.2.8                           |п.2.8     |temp table,varray         |Замена временных таблиц на `VARRAY`                 |Временные таблицы приводят к проблемам производительности (pg_catalog bloat). Заменять на `VARRAY` (до 10 000 записей) или использовать `init_temp_table()`.                                                                                      |`create global temporary table t (id number)`             |`type t_varray is varray(10000) of number`
|15 |++|v50.STOR.INDEX.п.2.6.3                        |п.2.6.3   |index,btree,size,limit    |Учёт ограничения 2704 байт для BTREE                |Размер строки BTREE индекса не более 2704 байт. При превышении переходить на GIST/GIN индексы с опциями `gist_trgm_ops` или `gin_trgm_ops`.                                                                                                       |`create index idx on t(long_text)`                        |`create index idx on t using gin(long_text gin_trgm_ops)`
|16 |++|v50.PROC.CRYPTO.п.3.1.2                       |п.3.1.2   |crypto,security,hash      |Замена `dbms_crypto` на `INT_EXT_CALL_001`          |Пакет `dbms_crypto` недоступен. Использовать `::[PCORE_INTERFACE].[INT_EXT_CALL_001]`.                                                                                                                                                            |`dbms_crypto.hash(src, dbms_crypto.hash_md5)`             |`::[PCORE_INTERFACE].[INT_EXT_CALL_001].HSH_B(...)`
|17 |++|v50.PROC.SMTP.п.3.1.3                         |п.3.1.3   |smtp,email,mail           |Замена `utl_smtp` на `INT_EMAIL_001`                |Пакет `utl_smtp` недоступен. Использовать `::[PCORE_INTERFACE].[INT_EMAIL_001]`.                                                                                                                                                                  |`utl_smtp.mail(...)`                                      |`::[PCORE_INTERFACE].[INT_EMAIL_001].SendMail(...)`
|18 |++|v50.PROC.HTTP.п.3.1.6                         |п.3.1.6   |http,web,request          |Замена `utl_http` на `HTTP_MGR`                     |Пакет `utl_http` недоступен. Использовать `::[RUNTIME].[HTTP_MGR]`. Функции: `url_escape`, `url_unescape`.                                                                                                                                        |`utl_http.request(...)`                                   |`::[RUNTIME].[HTTP_MGR].url_escape(...)`
|19 |++|v50.PROC.EXECUTE.п.3.3                        |п.3.3     |dynamic sql,execute,escape|Экранирование имён таблиц в `execute immediate`     |В `execute immediate` имена таблиц экранировать двойными кавычками: `"Z#MY_TABLE"`. Не использовать Oracle-специфичный синтаксис.                                                                                                                 |`execute immediate 'truncate table Z#T'`                  |`execute immediate 'truncate table "Z#T"'`
|20 |++|v50.PROC.WHENOTHERS.п.3.5                     |п.3.5     |exception,rollback,raise  |Добавление `ROLLBACK` или `RAISE` в `WHEN OTHERS`   |В PostgreSQL после ошибки транзакция прерывается. В `WHEN OTHERS` обязательно делать `ROLLBACK` (до savepoint) или `RAISE`.                                                                                                                       |`exception when others then null;`                        |`exception when others then rollback; raise;`
|21 |++|v50.PROC.BULK.п.1.28                          |п.1.28    |bulk,batch,performance    |Включение batch для bulk операций                   |Для массовых операций включить batch через `APPLICATION.DBI=1` или `pragma hint('jdbc_batch(true)')`.                                                                                                                                             |                                                          |bulk insert без batch                                      |`pragma hint('jdbc_batch(true)')`
|22 |++|v50.PROC.JSON.п.3.1.4                         |п.3.1.4   |json,api,library          |Использование `[RUNTIME].[LIB_JSON]` для JSON       |Для работы с JSON использовать только `::[RUNTIME].[LIB_JSON]`.                                                                                                                                                                                   |Oracle JSON API                                           |`::[RUNTIME].[LIB_JSON]`
|23 |++|v50.PROC.TRIGGER.п.3.8                        |п.3.8     |trigger,database,plsql    |Замена триггеров БД на операции-триггеры            |Триггеры БД заменить на операции типа «Триггер» в PL+.                                                                                                                                                                                            |Триггер БД                                                |операция «Триггер»
|24 |++|v50.PROC.XML.п.3.6                            |п.3.6     |xml,parser,dom            |Использование `[RUNTIME].[XML_DB]` для XML          |Для работы с XML использовать только библиотеки `[RUNTIME].[XML_DB]`, `[RUNTIME].[XML_DOM]`, `[RUNTIME].[XT]`, `[RUNTIME].[XQ]`.                                                                                                                  |`dbms_xmldom`                                             |`[RUNTIME].[XML_DB]`
|25 |++|v50.PROC.EXCEPTIONLOOP.п.1.25                 |п.1.25    |exception,bulk,loop       |Запрет конструкции `exceptionloop`                  |Конструкция `exceptionloop` запрещена, так как в PostgreSQL при возникновении исключения в SQL портится вся транзакция.                                                                                                                           |`exceptionloop`                                           |переписать без exceptionloop
|26 |++|v50.PROC.MACROS.п.3.4                         |п.3.4     |macro,substitution        |Запрет макросов `execute` и `process`               |Макросы `execute` и `process` не поддерживаются в DBI. Их необходимо исключить из кода.                                                                                                                                                           |`pragma macro(... execute)`                               |исключить
|27 |++|v50.PROC.DYNAMIC_SQL.п.3.3                    |п.3.3     |dynamic sql,dbms_sql      |Замена `DBMS_SQL` на `[RUNTIME].[CALC]`             |Динамический SQL через `DBMS_SQL` заменить на `::[RUNTIME].[CALC]` или `::[RUNTIME].[PLP]`.                                                                                                                                                       |`dbms_sql.open_cursor`                                    |`::[RUNTIME].[CALC].plp_c`
|28 |++|v50.INT.DBLINK.п.4.2                          |п.4.2     |dblink,rest,soap          |Замена Database Link на REST/SOAP                   |Database Link не поддерживается. Использовать веб-сервисы: REST (`1B060230` — потребитель, `1B060220` — поставщик) или SOAP (`1B060250` — потребитель, `1B060240` — поставщик).                                                                   |`select * from table@dblink`                              |REST/SOAP веб-сервисы
|29 |++|v50.INT.QUEUE.п.4.4                           |п.4.4     |queue,aq,mq               |Использование `[RUNTIME].[AQ_LIB]` для очередей     |Для работы с очередями использовать библиотеку `::[RUNTIME].[AQ_LIB]`. Для PostgreSQL обязательно использование Apache ActiveMQ.                                                                                                                  |Oracle AQ                                                 |`::[RUNTIME].[AQ_LIB]`
|30 |++|v50.CACHE.REF.п.6.10                          |п.6.10    |cache,ref,dereference     |Получение полей сразу в курсоре                     |Разыменование ссылок в цикле вызывает точечные запросы. Получать нужные поля сразу в SELECT-листе курсора.                                                                                                                                        |`for rec in (select ref_col from t) loop v := rec.ref_col.field; end loop;`|`for rec in (select ref_col.field from t) loop v := rec.field; end loop;`
|31 |++|v50.CACHE.CONFIG.п.6.13                       |п.6.13    |cache,hibernate,performance|Настройка кэша 2 уровня в `config_orm.xml`         |Для часто используемых ТБП настроить кэш 2 уровня в `config_orm.xml` с параметрами `read-only` (неизменяемые данные), `read-write` (строгая синхронизация) или `nonstrict_read_write`.                                                            |Нет кэша                                                  |`<cache usage="read-only">CLIENT</cache>`
|32 |++|тдс20240828.SQL.DML_JOIN.стр.1                |стр.1     |dml,join,update,delete    |Запрет DML с присоединением немодифицируемых таблиц |В `update`/`delete` нельзя присоединять таблицы, которые не модифицируются. Переписать на подзапросы или явные условия.                                                                                                                           |`delete from (select ... from t1 join t2)`                |переписать на подзапрос
|33 |++|тдс20240828.SQL.METADATA.стр.3                |стр.3     |metadata,join,analytics   |Запрет выборки из таблиц метаданных с JOIN          |Нельзя использовать `JOIN` с `varray`, аналитические функции и иерархические запросы при обращении к метаданным. В колонках запроса можно разыменовывать реквизиты-ссылки на метаданные (аналогично UDF).                                         |`select * from classes join ...`                          |использовать метаклассы
|34 |++|тдс20240828.SQL.PSEUDO.стр.3                  |стр.3     |pseudocolumn,oracle       |Запрет псевдоколонок Oracle                         |Псевдоколонки `OBJECT_ID`, `OBJECT_VALUE`, `ORA_ROWSCN`, `ROWID`, `ROWNUM`, `XMLDATA` не поддерживаются. Исключить или заменить на прикладную логику.                                                                                             |`select rowid, rownum from t`                             |исключить
|35 |++|тдс20240828.PROC.REPORT.стр.3                 |стр.3     |report,oracle reports     |Запрет операций-отчётов с Oracle Reports            |Операции типа «Отчёт» на основе Oracle Reports запрещены. Использовать OOXML.                                                                                                                                                                     |Oracle Reports                                            |OOXML
|36 |++|тдс20240828.SQL.SIMPLE_VIEW.стр.3             |стр.3     |view,simple               |Запрет простых представлений                        |Вместо простых представлений (`VIEW`) использовать PL+ представления.                                                                                                                                                                             |`create view v as select ...`                             |PL+ представление
|37 |++|тдс20240828.SQL.ANSI_JOIN_ANNOTATION.стр.3-4  |стр.3-4   |ansi,join,annotation      |Добавление `@generate_ansi_joins(true)` для A2      |Для хранилищ A2 добавлять аннотацию для генерации ANSI JOIN. В A1 (старый АРМ) неявные внешние соединения писать вручную.                                                                                                                         |                                                          |`@generate_ansi_joins(true)`
|38 |++|тдс20240828.SQL.FETCH_EXISTS.стр.5            |стр.5     |fetch,exists,subquery     |Запрет `fetch` в подзапросе `EXISTS`                |В подзапросе `EXISTS` нельзя использовать `fetch` — это вызывает полную выборку подзапроса.                                                                                                                                                       |`exists (select 1 from t fetch first 1)`                  |убрать fetch
|39 |++|тдс20240828.SQL.UDF_LIMITS.стр.6              |стр.6     |udf,limits                |Ограничения UDF в SQL-запросах                      |UDF разрешены только в SELECT-листе запроса верхнего уровня без UNION. Запрещены в WHERE, GROUP BY, ORDER BY, подзапросах, выражениях.                                                                                                            |`where my_func(id) > 0`                                   |вынести в SELECT
|40 |++|тдс20240828.SQL.XMLTYPE.стр.7                 |стр.7     |xml,xmltype               |Запрет XMLType в SQL-запросах                       |В SQL-запросах нельзя использовать `XMLType` — его нет в PostgreSQL. Процедурная поддержка XMLType есть на уровне ТЯ.                                                                                                                             |`select xmltype('...') from t`                            |использовать `[RUNTIME].[XML_DB]`
|41 |++|тдс20240828.SQL.VW_SQL.стр.7                  |стр.7     |vw_sql,view               |Запрет обращений к `VW_SQL`                         |Представления `VW_SQL` не поддерживаются. Использовать `VW_RPT` или прямые запросы. Обращения к `VW_CRIT`, `VW_RPT` допустимы при отсутствии UDF-колонок.                                                                                         |`select * from VW_SQL`                                    |`select * from VW_RPT`
|42 |++|тдс20240828.PROC.MACRO.стр.7                  |стр.7     |macro,execute,process     |Запрет макросов `execute` и `process`               |Макросы подстановки `execute` и `process` не поддерживаются в DBI.                                                                                                                                                                                |`pragma macro(... execute)`                               |исключить
|43 |++|тдс20240828.PROC.DYNAMIC_SQL.стр.7            |стр.7     |dynamic sql,dbms_sql      |Замена `DBMS_SQL` на `[RUNTIME].[CALC]`             |Динамический SQL через `DBMS_SQL` заменить на `::[RUNTIME].[CALC]` или `::[RUNTIME].[PLP]`. Запрещены `RTL.execute_sql`, `RTL.exec_sql_out`, `UTILS.open_cursor`.                                                                                 |`dbms_sql.open_cursor`                                    |`::[RUNTIME].[CALC].plp_c`
|44 |++|тдс20240828.SQL.DECODE.стр.7-8                |стр.7-8   |decode,case               |Замена `DECODE` на `CASE`                           |Не любой `DECODE` компилятор сможет заменить на `CASE`. В `DECODE` может возникнуть неявное приведение типов. `CASE` более универсален.                                                                                                           |`select decode(status,1,'A',2,'B','?') from t`            |`select case status when 1 then 'A' when 2 then 'B' else '?' end from t`
|45 |++|тдс20240828.SQL.DATE_ARITHM.стр.8             |стр.8     |date,arithmetic,interval  |Использование `to_number()` при вычитании дат       |В PostgreSQL `DATE - DATE` возвращает `INTERVAL`. Приводить к числу через `to_number()`. Не использовать `INTERVAL 'MONTH'`, `'YEAR'` — применять `add_months` или `interval('1','DAY')*k`.                                                       |`date1 - date2`                                           |`to_number(to_char(date1 - date2))`
|46 |++|тдс20240828.STOR.TEMP_INIT.стр.8              |стр.8     |temp table,init           |Вызов `init_temp_table()` перед использованием      |Перед использованием временной таблицы вызвать `::[RUNTIME].[STORAGE_MGR].init_temp_table(p_class_id)`. Для таблиц «на сессию» предварительно очищать.                                                                                            |`create global temporary table t`                         |`init_temp_table('T')`
|47 |++|тдс20240828.PROC.TRIGGER.стр.9-10             |стр.9-10  |trigger,database          |Замена триггеров БД на операции-триггеры            |Триггеры БД заменить на операции типа «Триггер» в PL+. Для совместимости добавить проверку `attribute_mapping_service.is_enabled`.                                                                                                                |Триггер БД                                                |операция «Триггер»
|48 |++|тдс20240828.SQL.FUNC_REQ.стр.10               |стр.10    |functional,attributes     |Ограничения функциональных реквизитов               |Функциональные реквизиты можно использовать только в SELECT-листе верхнего уровня. При использовании в outer join возможно ошибка ORA-01799.                                                                                                      |функциональный реквизит в WHERE                           |вынести в SELECT
|49 |++|тдс20240828.SQL.HIERARCHICAL.стр.10-11        |стр.10-11 |hierarchical,connect by   |Замена `CONNECT BY` на `WITH RECURSIVE`             |Иерархические запросы по метаданным запрещены. Внутри `WITH` нельзя использовать колонку вышестоящего запроса. Нет аналога `NOCYCLE`. Порядок выборки отличается.                                                                                 |`connect by prior id = parent_id`                         |`with recursive ...`
|50 |++|тдс20240828.SQL.CAST.стр.11                   |стр.11    |cast,type conversion      |Явное приведение типов                              |Разные правила неявного приведения типов. Писать код с совместимыми типами или явным преобразованием. `LIKE` только к строкам.                                                                                                                    |`c_code + 1`                                              |`to_number(c_code) + 1`
|51 |++|тдс20240828.PROC.EXCEPTIONLOOP.стр.11         |стр.11    |exceptionloop             |Запрет конструкции `exceptionloop`                  |Конструкция `exceptionloop` запрещена, так как портит транзакцию в PostgreSQL.                                                                                                                                                                    |`exceptionloop`                                           |переписать
|52 |++|тдс20240828.SQL.BIND_GROUP.стр.12             |стр.12    |bind,group by,distinct    |Запрет bind переменных в GROUP BY, DISTINCT, ORDER BY|Нельзя использовать bind-переменные в выражениях `GROUP BY`, `DISTINCT`, `ORDER BY`. Переписать запрос.                                                                                                                                          |`group by :bind_var`                                      |`group by column_name`
|53 |++|тдс20240828.SQL.CONTEXT_USERENV.стр.12        |стр.12    |context,userenv           |Запрет контекстов USERENV и <OWNER>_SYSTEM          |Контексты `USERENV` и `<OWNER>_SYSTEM` (например, `IBS_SYSTEM`) запрещены. Использовать пользовательский контекст через `executor.set_context`.                                                                                                   |`sys_context('USERENV','DB_NAME')`                        |`executor.set_context('VAR', value)`
|54 |++|тдс20240828.SQL.XMLQUERY.стр.12               |стр.12    |xmlquery                  |Замена `XMLQuery` на `execute immediate`            |`XMLQuery` не поддерживается в PLPlus. Выполнять через `execute immediate`.                                                                                                                                                                       |`XMLQuery(...)`                                           |`execute immediate '...'`
|55 |++|тдс20240828.SQL.NESTED_TABLE.стр.12           |стр.12    |nested table,varray       |Запрет SQL-выборки из nested table                  |Выборка из вложенных массивов (`nested table`) запрещена. Использовать циклы или выборку из скалярных/объектных типов.                                                                                                                            |`select * from table(nested_tab)`                         |цикл по массиву
|56 |++|тдс20240828.SQL.OBJ_TYPES.стр.13              |стр.13    |json,object types         |Замена объектных типов Oracle                       |Объектные типы Oracle (`JSON_Object_T`, `AQ$_JMS_MAP_MESSAGE` и др.) не поддерживаются. Использовать `LIB_JSON` для JSON.                                                                                                                         |`JSON_Object_T`                                           |`[RUNTIME].[LIB_JSON]`
|57 |++|тдс20240828.SQL.ORA_HASH.стр.13               |стр.13    |ora_hash                  |Замена `ORA_HASH`                                   |Функция `ORA_HASH` не поддерживается. Использовать `dbms_crypto.hash` или `INT_EXT_CALL_001`.                                                                                                                                                     |`ora_hash(value)`                                         |`dbms_crypto.hash(...)`
|58 |++|тдс20240828.PROC.CODEGEN.стр.14               |стр.14    |codegen                   |Запрет кодогенерации операций и представлений       |Нельзя из PL+ создавать или изменять операции и представления.                                                                                                                                                                                    |PL+ код, создающий операции                               |исключить
|59 |++|тдс20240828.PROC.TRANSACTION.стр.14           |стр.14    |transaction,rollback      |Обработка прерванных транзакций                     |После ошибки БД транзакция прерывается. В `WHEN OTHERS` делать `ROLLBACK` до savepoint или `RAISE`.                                                                                                                                               |`exception when others then null;`                        |`exception when others then rollback; raise;`
|60 |++|тдс20240828.PROC.JSON.стр.14                  |стр.14    |json,lib_json             |Использование `[RUNTIME].[LIB_JSON]` для JSON       |Для работы с JSON использовать только `::[RUNTIME].[LIB_JSON]`. Объектные типы Oracle и PLJSON не поддерживаются.                                                                                                                                 |`JSON_Object_T`                                           |`::[RUNTIME].[LIB_JSON]`
|61 |++|тдс20240828.PROC.CHARSET.стр.14               |стр.14    |charset,encoding          |Использование `[RUNTIME].[CHARSET]` для кодировок   |Для конвертации кодировок использовать `::[RUNTIME].[CHARSET]`. Функция `convert` запрещена.                                                                                                                                                      |`convert(string, 'UTF8', 'CP1251')`                       |`[RUNTIME].[CHARSET].convert(...)`
|62 |++|тклоик20240828.LOCAL.PREFIX.стр.1             |стр.1     |prefix,psh                |Префикс `PSH_` для объектов Банка                   |Объекты, создаваемые сотрудниками Банка, должны иметь префикс `PSH_` в коротком имени (вместо `FTC_`).                                                                                                                                            |`FTC_CLIENT`                                              |`PSH_CLIENT`
|63 |++|тклоик20240828.LOCAL.PREFIX_BANK.стр.1        |стр.1     |prefix,bank               |Префикс банка `[ПСБ]` для локальных объектов        |Локальные объекты банка должны содержать префикс банка `[ПСБ]` согласно справочнику.                                                                                                                                                              |`CLIENT`                                                  |`[ПСБ]CLIENT`
|64 |++|тклоик20240828.LOCAL.OOXML.стр.1              |стр.1     |ooxml,reports             |Новые отчёты в формате OOXML                        |При разработке новых локальных отчётов Word и Excel использовать формат OOXML.                                                                                                                                                                    |Oracle Reports                                            |OOXML
|65 |++|тклоик20240828.LOCAL.CYRILLIC.стр.1           |стр.1     |cyrillic,encoding         |Запрет кириллицы в вычисляемых кодах                |Вычисляемые коды и параметры не должны содержать кириллицу.                                                                                                                                                                                       |`Код = 1`                                                 |`CODE = 1`
|66 |++|тклоик20240828.LOCAL.EXTENSION.стр.1          |стр.1     |extension,hook            |Флаг «Объединённый пакет» для операций расширения   |У новых операций расширения должен быть установлен флаг «Объединённый пакет». Удалить макросы `&BASE$SETVARS` и `&BASE$GETVARS`.                                                                                                                  |операция расширения без флага                             |флаг установлен
|67 |++|тклоик20240828.LOCAL.VIEW_DEFAULT.стр.2       |стр.2     |view,default              |Умолчательное представление `VW_CRIT_ИМЯ_КЛАССА`    |В новых классах должно быть представление «Полный список» с именем `VW_CRIT_ИМЯ_КЛАССА`.                                                                                                                                                          |нет представления                                         |`VW_CRIT_CLIENT`
|68 |++|тклоик20240828.LOCAL.VIEW_FILTER.стр.2        |стр.2     |view,filter               |Установка глобальных переменных только в EXECUTE    |В операциях-фильтрах установку глобальных переменных делать только в секции EXECUTE, основываясь на параметрах операции.                                                                                                                          |установка в валидаторе                                    |установка в EXECUTE
|69 |++|тклоик20240828.LOCAL.VIEW_USER.стр.2          |стр.2     |user,userid               |Замена `USER` на `[RUNTIME].[STDLIB].userid`        |В представлениях вместо `USER` использовать `::[RUNTIME].[STDLIB].userid`. Функция `USER` возвращает `APP_SRV` в 3-уровневой системе.                                                                                                             |`USER`                                                    |`::[RUNTIME].[STDLIB].userid`
|70 |++|тклоик20240828.DEV.NAMING.стр.2               |стр.2     |naming,underscore         |Идентификаторы с подчёркиваниями                    |Имена функций, процедур, переменных писать с разделением подчёркиванием: `OPER_DATE`. Допускается `camelCase` без подчёркиваний.                                                                                                                  |`operDate`                                                |`OPER_DATE`
|71 |++|тклоик20240828.DEV.REFERENCE_SYNTAX.стр.2     |стр.2     |syntax,reference          |Правильный синтаксис обращения к объектам           |Указывать полный путь: `:[ТБП].[ОПЕРАЦИЯ].<объект>`. Короткие имена типов в квадратных скобках с двумя двоеточиями: `::[TYPE_NAME]`.                                                                                                              |`[CLIENT]`                                                |`::[CLIENT].[LIB].get`
|72 |++|тклоик20240828.DEV.THIS_FORBIDDEN.стр.3       |стр.3     |this,initialization       |Запрет `THIS` для инициализации                     |Не использовать `THIS` для инициализации переменных в секции деклараций операций (Конструктор, Простая, Отчёт и др.).                                                                                                                             |`this := ...`                                             |убрать
|73 |++|тклоик20240828.DEV.REUSE_LIBRARIES.стр.3      |стр.3     |libraries,reuse           |Использование существующих библиотек                |Прежде чем писать свою функцию, проверить библиотеки `RUNTIME`, `StdLib`, `F`, `FD`, `FDP`.                                                                                                                                                       |своя реализация                                           |`::[RUNTIME].[...]`
|74 |++|тклоик20240828.DEV.NO_OBJECTS_VIEW.стр.3      |стр.3     |objects,performance       |Запрет запросов к `OBJECTS`, `COL2OBJ`, `REFS`      |Запросы к этим представлениям негативно сказываются на производительности.                                                                                                                                                                        |`select * from OBJECTS`                                   |использовать метаклассы
|75 |++|тклоик20240828.DEV.NO_MULTI_MODIFIER.стр.3    |стр.3     |modifier                  |Запрет нескольких модификаторов `%` подряд          |Не использовать более одного модификатора `%` подряд, если тип после первого неизвестен (приводит к запросам к `OBJECTS`).                                                                                                                        |`a%parent%class`                                          |переписать
|76 |++|тклоик20240828.DEV.VARCHAR_SIZE.стр.4         |стр.4     |varchar2,size             |Указывать размерность VARCHAR2/STRING               |Всегда указывать размерность для `VARCHAR2` и `STRING`. Размерность должна соответствовать хранимым данным.                                                                                                                                       |`v_name varchar2;`                                        |`v_name varchar2(100);`
|77 |++|тклоик20240828.DEV.NO_INTEGER_FOR_ID.стр.4    |стр.4     |integer,id                |Запрет `INTEGER` для ID экземпляров                 |ID экземпляров могут превышать диапазон `PLS_INTEGER`. Использовать `NUMBER` или больший тип.                                                                                                                                                     |`v_id integer;`                                           |`v_id number;`
|78 |++|тклоик20240828.DEV.NO_GOTO.стр.5              |стр.5     |goto,control              |Запрет `GOTO`                                       |Синтаксис `GOTO <LABEL>` запрещён. Переписывать алгоритм.                                                                                                                                                                                         |`goto label;`                                             |переписать на циклы
|79 |++|тклоик20240828.DEV.NO_SAVEPOINT_DIRECT.стр.5  |стр.5     |savepoint,rollback        |Запрет прямых `SAVEPOINT`/`ROLLBACK`                |Использовать макросы для генерации уникальных имён точек сохранения (например, `&sp(sp)`).                                                                                                                                                        |`savepoint sp;`                                           |`&sp(sp)`
|80 |++|тклоик20240828.DEV.VARIABLE_PREFIX.стр.6      |стр.6     |variable,prefix           |Префикс `v_` для локальных переменных               |Локальные переменные операции должны начинаться с префикса `v_`.                                                                                                                                                                                  |`cnt number;`                                             |`v_cnt number;`
|81 |++|тклоик20240828.DEV.CONSTANT_PREFIX.стр.6-7    |стр.6-7   |constant,prefix           |Префикс `cn_` для локальных констант                |Локальные константы должны начинаться с префикса `cn_`.                                                                                                                                                                                           |`MAX_SIZE constant number:=100;`                          |`cn_max_size constant number:=100;`
|82 |++|тклоик20240828.DEV.PARAM_PREFIX.стр.7         |стр.7     |parameter,prefix          |Префикс `p_` для параметров                         |Параметры процедур и функций должны начинаться с префикса `p_`.                                                                                                                                                                                   |`name in varchar2`                                        |`p_name in varchar2`
|83 |++|тклоик20240828.DEV.CURSOR_PREFIX.стр.7        |стр.7     |cursor,prefix             |Префикс `cur_` для курсоров                         |Локальные курсоры должны начинаться с префикса `cur_`.                                                                                                                                                                                            |`c1 is select ...`                                        |`cur_c1 is select ...`
|84 |++|тклоик20240828.DEV.GLOBAL_VAR.стр.7           |стр.7     |global,variable           |Запрет глобальных переменных                        |Запрещено использование глобальных переменных, влияющих на логику операции.                                                                                                                                                                       |глобальная переменная                                     |локальная переменная
|85 |++|тклоик20240828.DEV.CASE.стр.8                 |стр.8     |case,keywords             |Служебные слова строчными буквами                   |Служебные слова и операторы языка писать строчными буквами.                                                                                                                                                                                       |`SELECT * FROM t`                                         |`select * from t`
|86 |++|тклоик20240828.DEV.NO_PLSQL_INSERT.стр.8      |стр.8     |plsql,insert              |Запрет PL/SQL вставок                               |Запрещено использовать PL/SQL вставки. Переписывать на PL+.                                                                                                                                                                                       |PL/SQL insert                                             |PL+ конструкция